--- a/src/Reviews/Form.module.css
+++ b/src/Reviews/Form.module.css
@@ -1,13 +1,20 @@
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .rating {
     overflow: hidden;
     width: 265px;
 }
 
-.rating:not(:checked) > input {
+.rating > input {
     display: none;
 }
 
-.rating:not(:checked) > label {
+.rating > label {
     float: right;
     width: 42px;
     padding: 0;
@@ -18,7 +25,7 @@
     text-shadow: 1px 1px #bbb;
 }
 
-.rating:not(:checked) > label:before {
+.rating > label:before {
     content: '★';
 }
 
@@ -27,16 +34,7 @@
     text-shadow: 1px 1px #c60;
 }
 
-.rating:not(:checked) > label:hover,
-.rating:not(:checked) > label:hover ~ label {
+.rating > label:hover,
+.rating > label:hover ~ label {
     color: gold;
-}
-
-.rating > input:checked + label:hover,
-.rating > input:checked + label:hover ~ label,
-.rating > input:checked ~ label:hover,
-.rating > input:checked ~ label:hover ~ label,
-.rating > label:hover ~ input:checked ~ label {
-    color: gold;
-    text-shadow: 1px 1px goldenrod;
 }
