--- a/src/Reviews/Form.module.css
+++ b/src/Reviews/Form.module.css
@@ -7,7 +7,8 @@
 
 .rating {
     overflow: hidden;
-    width: 265px;
+    display: flex;
+    flex-direction: row-reverse;
 }
 
 .rating > input {
@@ -15,7 +16,6 @@
 }
 
 .rating > label {
-    float: right;
     width: 42px;
     padding: 0;
     cursor: pointer;
@@ -23,6 +23,8 @@
     line-height: 32px;
     color: lightgrey;
     text-shadow: 1px 1px #bbb;
+    display: flex;
+    justify-content: center;
 }
 
 .rating > label:before {
