--- a/src/PhoneBook/ContactInfo/ContactInfo.module.css
+++ b/src/PhoneBook/ContactInfo/ContactInfo.module.css
@@ -3,6 +3,12 @@
     justify-content: space-between;
 }
 
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .item {
-    margin: 10px;
+    margin: 20px;
 }
