--- a/src/PhoneBook/ContactsList/ContactsList.module.css
+++ b/src/PhoneBook/ContactsList/ContactsList.module.css
@@ -1,8 +1,14 @@
+.contactsList {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .container {
-    padding: 5px;
+    width: 70%;
 }
 
 .item {
-    margin: 5px;
-    padding: 5px;
+    margin: 10px;
+    padding: 10px;
 }
