--- a/src/Field/Container.module.css
+++ b/src/Field/Container.module.css
@@ -1,9 +1,5 @@
 .container {
-    margin: 100px;
+    margin-top: 100px;
     display: flex;
-}
-
-.container > * {
-    margin: 10px;
-    width: 300px;
+    justify-content: center;
 }
