--- a/src/PhoneBookRedux/components/PhoneBook/PhoneBook.module.css
+++ b/src/PhoneBookRedux/components/PhoneBook/PhoneBook.module.css
@@ -2,3 +2,10 @@
     font-size: 18pt;
     margin: 0 auto;
 }
+
+.bodyClass {
+    max-width: 1024px;
+    margin: 0 auto;
+    height: 100vh;
+    position: relative;
+}
